Parser IOException throw added